[project]
name = "WaveLadruno"
version = "0.1.0"
description = "Wave Propagation. Introduction"
authors = [{ name = "Patricio Palacios", email = "ppalacios92@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["WaveLadruno*"]